--- a/style.css
+++ b/style.css
@@ -533,7 +533,7 @@ img {
 
 /* Соцсети */
 .social-section {
-    padding: 80px 0;
+    padding-top: 80px;
     background-color: var(--dark-color);
     color: var(--white);
     text-align: center;
